# Inf_poisk

./: README.md  download_pages.py  download_progress.json  final_stats.py  get_category_pages.py  page_list.txt  report.tex  resume_download.py  stats_interim.py
2/: config.yaml  crawler.py  requirements.txt
3/tokenizer/: CMakeLists.txt  run.bat
3/tokenizer/src/: file_processor.cpp  file_processor.h  main.cpp  tokenizer.cpp  tokenizer.h
4/: indexer_with_stemming.cpp  stemmer.cpp  stemmer.h  stemming_evaluation.py
5/: zipf_analysis.py  zipf_analysis_results.txt
6/: boolean_index_builder.cpp  boolean_index_reader.cpp
7/: bool_search.cpp
